# SquareMatrix

./: CMakeLists.txt  SquareMatrix.h  SquareMatrixController.h  input.txt  main.cpp  output.txt
res/: input.txt  output.txt
